Fix table overflow, many thanks Andreas

--- a/app/static/theme.css
+++ b/app/static/theme.css
@@ -16744,7 +16744,6 @@ canvas {
 -----------------------------------------------*/
 td:last-child {
   width: 1px;
-  white-space: nowrap;
 }
 
 th {
